# ind-krig

./: CMakeLists.txt
src/: main.cpp
src/FileParser/: fileparser.cpp  fileparser.h
src/kriging/: kriging.cpp  kriging.h  kriging_copy.cpp  test.cpp
src/model/: model.cpp  model.h
